[gd_scene load_steps=6 format=1]

[ext_resource path="res://scripts/menu.gd" type="Script" id=1]
[ext_resource path="res://fonts/freesans.fnt" type="BitmapFont" id=2]
[ext_resource path="res://images/menu.png" type="Texture" id=3]
[ext_resource path="res://images/quit.png" type="Texture" id=4]
[ext_resource path="res://images/quit_pressed.png" type="Texture" id=5]

[node name="Control" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 1 )

[node name="TextureFrame" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 2.0
margin/top = 1.0
margin/right = 1026.0
margin/bottom = 601.0
stretch_mode = 0

[node name="Label" type="Label" parent="TextureFrame"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 647.0
margin/top = 83.0
margin/right = 900.0
margin/bottom = 101.0
custom_fonts/font = ExtResource( 2 )
text = "MENU: Please Select Your Game"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Button1" type="Button" parent="TextureFrame"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 690.0
margin/top = 177.0
margin/right = 846.0
margin/bottom = 197.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Two Player Game        "
flat = false

[node name="Button2" type="Button" parent="TextureFrame"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 689.0
margin/top = 237.0
margin/right = 845.0
margin/bottom = 257.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Play Against Computer"
flat = false

[node name="Button3" type="Button" parent="TextureFrame"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 690.0
margin/top = 298.0
margin/right = 846.0
margin/bottom = 318.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Computer Plays First   "
flat = false

[node name="TextureFrame 2" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 3.0
margin/top = -1.0
margin/right = 515.0
margin/bottom = 599.0
texture = ExtResource( 3 )
stretch_mode = 0

[node name="TextureButton" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 713.0
margin/top = 449.0
margin/right = 813.0
margin/bottom = 499.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
textures/pressed = ExtResource( 5 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 124.0
margin/bottom = 58.0
popup/exclusive = false
window/title = "Please Confirm..."
dialog/text = "Are you sure you want to quit?"
dialog/hide_on_ok = true


